# timer

./: .gitattributes  .gitignore  README.md  convert_icons.py  top.aslant.countdown.yml
.github/workflows/: build.yml  ci.yml  flatpak.yml  release.yml
flatpak/: README.md  top.aslant.countdown.desktop  top.aslant.countdown.metainfo.xml  top.aslant.countdown.yml
icons/: 128x128.png.backup  128x128@2x.png.backup  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: index.html
ui/css/: style.css  tailwind.min.css
ui/js/: app.js
