[package]
name = "countdown-timer"
version = "1.0.0"
description = "计时器"
authors = ["ASLant"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keepawake = "0.5" # 防止系统休眠

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
