[package]
name = "countdown-timer"
version = "1.0.8"
description = "A powerful countdown timer application"
authors = ["ASLant"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keepawake = "0.5" # 防止系统休眠
reqwest = { version = "0.12", features = ["json", "blocking"] } # HTTP 客户端
semver = "1.0" # 版本比较

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true      # 移除调试符号
opt-level = "z"   # 优化大小
lto = true        # 链接时优化
codegen-units = 1 # 更好的优化（稍慢但体积更小）
panic = "abort"   # 减小panic处理代码
